# TensorRT-LLM

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  requirements-dev-windows.txt  requirements-dev.txt  requirements-windows.txt  run.sh  setup.cfg  setup.py
benchmarks/cpp/: CMakeLists.txt  bertBenchmark.cpp
benchmarks/python/: all_reduce.py  gpt_benchmark.py  mem_monitor.py
cpp/cmake/modules/: find_library_create_target.cmake
cpp/include/tensorrt_llm/batch_manager/: GptManager.h  NamedTensor.h  batchScheduler.h  callbacks.h  kvCacheManager.h  trtGptModelOptionalParams.h
cpp/include/tensorrt_llm/runtime/: bufferManager.h  cudaEvent.h  cudaStream.h  gptDecoder.h  (+9 more)
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/common/: CMakeLists.txt  cublasVersionCheck.h  cudaAllocator.cpp  cudaAllocator.h  cudaBf16Fallbacks.cuh  cudaBf16Wrapper.h  cudaFp8Utils.cu  cudaFp8Utils.h  cudaTypeUtils.cuh  cudaUtils.h  logger.h  memoryUtils.cu  nvtxUtils.h  quantization.h  reduceKernelUtils.cuh  stlUtils.h  stringUtils.cpp  stringUtils.h  tensor.cpp  tllmException.cpp  tllmException.h
cpp/tensorrt_llm/kernels/: banBadWords.cu  banBadWords.h  banRepeatNgram.h  beamSearchTopkKernels.cu  customAllReduceKernels.h  decoderMaskedMultiheadAttention.h  decodingKernels.h  gptKernels.cu  layernormKernels.cu  layernormKernels.h  lookupKernels.cu  preQuantScaleKernel.cu  quantization.cu  samplingPenaltyKernels.cu  samplingPenaltyKernels.h  samplingTopKKernels.h  unfusedAttentionKernels.cu
cpp/tensorrt_llm/layers/: CMakeLists.txt  baseBeamSearchLayer.h  baseLayer.h  baseSamplingLayer.cpp  baseSamplingLayer.h  dynamicDecodeLayer.cpp  dynamicDecodeLayer.h  onlineBeamSearchLayer.h  topKSamplingLayer.cu  topKSamplingLayer.h  topPSamplingLayer.cu
cpp/tensorrt_llm/plugins/: CMakeLists.txt
cpp/tensorrt_llm/runtime/: bufferView.h  gptDecoder.cpp  gptDecoderBatch.cpp  gptJsonConfig.cpp  iBuffer.cpp  iTensor.cpp  ncclCommunicator.h  runtimeKernels.cu  runtimeKernels.h  statefulGptDecoder.cpp  statefulGptDecoder.h  tllmRuntime.cpp  tllmRuntime.h  torch.h  worldConfig.cpp
cpp/tensorrt_llm/thop/: dynamicDecodeOp.h  fp8Op.cpp  thUtils.cu  thUtils.h  torchAllocator.cpp  torchAllocator.h
cpp/tests/: CMakeLists.txt
cpp/tests/common/: allocatorTest.cpp  memoryUtilsTest.cu  tensorTest.cpp  tllmExceptionTest.cpp
cpp/tests/resources/: .gitignore
cpp/tests/resources/scripts/: build_chatglm6b_engines.py  build_engines_utils.py  build_gpt_engines.py  build_gptj_engines.py  generate_expected_gpt_output.py  generate_hf_gpt_output.py  io_converter.py
cpp/tests/runtime/: bufferManagerTest.cpp  gptDecoderTest.cpp  gptSessionTest.cpp  tllmBuffersTest.cpp  torchTest.cpp  transposeKVKernelTest.cpp
docker/: Makefile
docker/common/: install_base.sh  install_cmake.sh  install_polygraphy.sh  install_pytorch.sh
docs/: make.bat
docs/source/: conf.py
docs/source/python-api/: tensorrt_llm.functional.rst  tensorrt_llm.models.rst  tensorrt_llm.plugin.rst  tensorrt_llm.runtime.rst
examples/baichuan/: requirements.txt  summarize.py  weight.py
examples/bert/: .gitignore  build.py  run.py  weight.py
examples/blip2/: onnx_export.py  run.py
examples/bloom/: .gitignore  convert.py  hf_bloom_convert.py  smoothquant.py
examples/chatglm2-6b/: build.py  run.py  summarize.py  weight.py
examples/chatglm6b/: .gitignore  build.py  convert.py  hf_chatglm6b_convert.py  requirements.txt  run.py  smoothquant.py  weight.py
examples/cpp_library/: CMakeLists.txt  build.sh  main.cpp
examples/enc_dec/: build.py
examples/falcon/: requirements.txt  run.py  weight.py
examples/gpt/: .gitignore  hf_gpt_convert.py  nemo_ckpt_convert.py  nemo_prompt_convert.py  run.py  run_hf.py  summarize.py
examples/gpt/utils/: convert.py  nemo.py
examples/gptj/: run.py  weight.py
examples/gptneox/: .gitignore  build.py  gptq_convert.sh
examples/llama/: benchmark.py  build.sh  readme_benchmark.md  run.py  run.sh  run_benchmark.sh  smoothquant.py  summarize.py  utils.py
examples/mpt/: .gitignore  convert_hf_mpt_to_ft.py
examples/openai_triton/manual_plugin/: CMakeLists.txt  TritonFlashAttentionPlugin.h  fmha_triton.py  run.py
examples/openai_triton/plugin_autogen/: build_engine.py  run_engine.py
examples/opt/: build.py  hf_opt_convert.py
examples/quantization/: requirements.txt
scripts/: build_wheel.py
tensorrt_llm/: __init__.py  _common.py  _utils.py  graph_rewriting.py  mapping.py  module.py  profiler.py
tensorrt_llm/layers/: attention.py  cast.py  conv.py  embedding.py
tensorrt_llm/models/: generation_mixin.py
tensorrt_llm/models/baichuan/: model.py
tensorrt_llm/models/bert/: model.py
tensorrt_llm/models/bloom/: __init__.py  model.py
tensorrt_llm/models/chatglm2_6b/: model.py
tensorrt_llm/models/chatglm6b/: model.py
tensorrt_llm/models/gptj/: model.py
tensorrt_llm/models/gptneox/: model.py
tensorrt_llm/models/llama/: __init__.py  model.py
tensorrt_llm/models/opt/: model.py
tensorrt_llm/models/unet/: __init__.py  resnet.py  unet_2d_blocks.py  unet_2d_condition.py  weights.py
tensorrt_llm/quantization/: __init__.py  functional.py
tensorrt_llm/runtime/: __init__.py  generation.py  session.py
tensorrt_llm/tools/plugin_gen/: core.py  plugin_gen.py  shape_infer.py
tests/: pytest.ini  test_debugging_api.py  test_export.py  test_kv_cache_manager.py  test_module.py  test_plugins.py  test_precision_control.py  test_session.py
tests/attention/: test_gpt_attention_IFB.py
tests/functional/: test_alibi.py  test_arange.py  test_avg_pool2d.py  test_einsum.py  test_exp.py  test_flip.py  test_geglu.py  test_gelu.py  test_group_norm.py  test_identity.py  test_index_select.py  test_matmul.py  test_nccl.py  test_permute.py  test_rms_norm.py  test_silu.py  test_sin.py  test_softplus.py  test_split.py  torch_ref.py
tests/model/: test_bert.py  test_bloom.py  test_gpt.py  test_gptj.py  test_llama.py
tests/quantization/: _utils.py  test_functional.py  test_quant.py
tests/tools/plugin_gen/: kernel_config.py  test_plugin_gen.py  test_shape_infer.py
tests/utils/: util.py
(+90 files in other folders)
